hphp/hack/test/typecheck/akempty/akempty_promotion_1.php.exp
File "akempty_promotion_1.php", line 10, characters 5-6:
Invalid argument (Typing[4110])
File "akempty_promotion_1.php", line 13, characters 18-20:
Expected int
File "akempty_promotion_1.php", line 8, characters 10-14:
But got string
